# lib_checker

./: README.md  pyproject.toml
scripts/: Checker.py
scripts/utils/: files.py  libraries.py
